Update titles in read.html for consistency

--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -367,7 +367,7 @@
         <a href="/reflections/index.html" class="brand-link">
           <img src="/reflections/assets/logo1.PNG" alt="Moments of Solitude" class="brand-logo">
           <span class="brand-text">
-            <span class="brand-title">TRANSCENDENCE</span>
+            <span class="brand-title">The Inner Listener</span>
             <span class="brand-subtitle">Stone Grill Reflections</span>
           </span>
         </a>
@@ -412,7 +412,7 @@
 
         <div class="current-page-badge">
           <span class="page-icon">△</span>
-          <span class="page-label">TRANSCENDENCE</span>
+          <span class="page-label">The Prayer</span>
         </div>
       </div>
 
@@ -614,4 +614,4 @@
 </script>
 
 </body>
-</html> 
+</html>
