Update Open Graph metadata and styles

--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -12,20 +12,20 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="TRANSCENDENCE - Unwraveling the enigma of absolute reality">
+  <meta property="og:title" content="TRANSCENDENCE - The inner listener">
   <meta property="og:image" content="transcendence.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
 
   <!-- Main reflections styles -->
-  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=26">
+  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
 
   <!-- ✅ PUT BACK AUDIO: audio system loader (required to render .audio-player) -->
-  <script src="/reflections/assets/audio-system.js?v=19" defer></script>
+  <script src="/reflections/assets/audio-system.js?v=14" defer></script>
 
   <style>
     /* ✅ NEW: single source of truth for header height */
     :root{
-      --header-h: 124px;      /* desktop taller header */
+      --header-h: 104px;      /* desktop taller header */
       --header-h-mobile: 84px;/* mobile taller header */
     }
 
@@ -47,7 +47,7 @@
     }
 
     .ref-header-inner {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 0 auto;
 
       /* ✅ give more breathing room (taller feel) */
@@ -83,8 +83,8 @@
     }
 
     .brand-logo {
-      width: 54px;      /* ✅ slightly bigger to match taller header */
-      height: 54px;
+      width: 44px;      /* ✅ slightly bigger to match taller header */
+      height: 44px;
       border-radius: 50%;
       object-fit: cover;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
@@ -336,16 +336,79 @@
       }
     }
 
-    /* =========================
-       AUDIO WRAP
+     /* =========================
+       AUDIO PLAYLIST (tighter)
     ========================== */
-    .audio-wrap {
-      max-width: 800px;
-      margin: 1.2rem auto 1.2rem auto;
-      padding: 0.85rem 0.75rem;
-      border-radius: 16px;
+    .audio-wrap{
+      max-width:800px;
+      margin:1.2rem auto 1.2rem auto;
+      padding:0.85rem 0.75rem;
+      border-radius:16px;
       background:#261a15;
-      border: 3px solid rgba(101, 55, 14, 1);
+      border:3px solid rgba(101,55,14,1);
+    }
+
+    #reflectionAudio{
+      width:100%;
+      display:block;
+    }
+
+    .playlist{
+      margin-top:0.9rem;
+      display:flex;
+      flex-direction:column;
+      gap:0.4rem;
+    }
+
+    .playlist-row{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:0.55rem 0.55rem;
+      background:#261a15;
+      border-radius:8px;
+      cursor:pointer;
+      border:1.5px solid #120d09;
+      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
+    }
+
+    .playlist-row:hover{ border-color:#42251c; }
+
+    .playlist-row.active{
+      background:#170d09;
+      border-color:#997060;
+      box-shadow:0 0 2px rgba(255,0,0,0.4);
+    }
+
+    .playlist-main{
+      display:flex;
+      flex-direction:column;
+      gap:0rem;
+      overflow:hidden;
+    }
+
+    .playlist-title{
+      font-size:0.96rem;
+      font-weight:600;
+      color:#f3e6dd;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .playlist-sub{
+      font-size:0.78rem;
+      color:#b29587;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .playlist-duration{
+      font-size:0.82rem;
+      color:#c9b0a4;
+      margin-left:0.75rem;
+      flex-shrink:0;
     }
   </style>
 
@@ -367,7 +430,7 @@
         <a href="/reflections/index.html" class="brand-link">
           <img src="/reflections/assets/logo1.PNG" alt="Moments of Solitude" class="brand-logo">
           <span class="brand-text">
-            <span class="brand-title">TRANSCENDENCE</span>
+            <span class="brand-title">The Inner Listener</span>
             <span class="brand-subtitle">Stone Grill Reflections</span>
           </span>
         </a>
@@ -434,33 +497,14 @@
     </div>
   </section>
 
-  <!-- ===== AUDIO ===== --><section class="audio-wrap">
-        <div class="audio-wrapper">
-          <audio id="reflectionAudio" controls preload="metadata">
-            <source id="audioSource" src="" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-
-          <div class="playlist">
-            <div class="playlist-row active" data-src="/reflections/pages/transcendence/transcendence.mp3">
-              <div class="playlist-main">
-                <div class="playlist-title">TRANSCENDENCE</div>
-                <div class="playlist-sub">The Silent Architech of your soul.</div>
-              </div>
-              <div class="playlist-duration">--:--</div>
-            </div>
-
-            <div class="playlist-row" data-src="/reflections/pages/subconsciousmind/subcon.mp3">
-              <div class="playlist-main">
-                <div class="playlist-title">The Paradox of God</div>
-                <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
-              </div>
-              <div class="playlist-duration">--:--</div>
-            </div>
-          </div>
-        </div>
-      </section>
-
+  <!-- ===== AUDIO ===== -->
+  <section class="audio-wrap" id="audio">
+    <div
+      class="audio-player"
+      data-title="Unraveling the Enigma of Absolute Truth"
+      data-audio="/reflections/pages/transcendence/transcendence.mp3">
+    </div>
+  </section>
 
   <div class="ref-divider">-- ❖ --</div>
 
