Update title and metadata for Transcendence page

--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>The Subconscious Mind -- Ninox Antolihao</title>
+  <title>TTRANSCENDENCE -- Ninox Antolihao</title>
 
   <!-- Disclaimer -->
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
@@ -12,9 +12,9 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Subconscious Mind - Solitude Reflections">
-  <meta property="og:image" content="subconP.jpg">
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html">
+  <meta property="og:title" content="TRANSCENDENCE - Solitude Reflections">
+  <meta property="og:image" content="transcendence.jpg">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
@@ -416,7 +416,7 @@
         <a href="/reflections/index.html" class="brand-link">
           <img src="/reflections/assets/logo1.PNG" alt="Moments of Solitude" class="brand-logo">
           <span class="brand-text">
-            <span class="brand-title">The Subconscious Mind</span>
+            <span class="brand-title">TRANSCENDENCE</span>
             <span class="brand-subtitle">Stone Grill Reflections</span>
           </span>
         </a>
@@ -464,7 +464,7 @@
       <div class="ref-header-right">
         <div class="current-page-badge">
           <span class="page-icon">△</span>
-          <span class="page-label">The Divine Hiddeness</span>
+          <span class="page-label">TRANSCENDENCE</span>
         </div>
       </div>
 
@@ -494,7 +494,7 @@
           </audio>
 
           <div class="playlist">
-            <div class="playlist-row active" data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
+            <div class="playlist-row active" data-src="/reflections/pages/transcendence/transcendence.mp3">
               <div class="playlist-main">
                 <div class="playlist-title">The Subconscious Mind</div>
                 <div class="playlist-sub">The Silent Architech of your soul.</div>
@@ -502,7 +502,7 @@
               <div class="playlist-duration">--:--</div>
             </div>
 
-            <div class="playlist-row" data-src="/reflections/pages/subconsciousmind/subcon.mp3">
+            <div class="playlist-row" data-src="/reflections/pages/transcendence/transcendence.mp3">
               <div class="playlist-main">
                 <div class="playlist-title">The Paradox of God</div>
                 <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
