Update playlist titles in read.html

--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -496,15 +496,15 @@
           <div class="playlist">
             <div class="playlist-row active" data-src="/reflections/pages/transcendence/transcendence.mp3">
               <div class="playlist-main">
-                <div class="playlist-title">The Subconscious Mind</div>
+                <div class="playlist-title">TRANSCENDENCE</div>
                 <div class="playlist-sub">The Silent Architech of your soul.</div>
               </div>
               <div class="playlist-duration">--:--</div>
             </div>
 
-            <div class="playlist-row" data-src="/reflections/pages/transcendence/transcendence.mp3">
+            <div class="playlist-row" data-src="/reflections/pages/initial-premise/premiseofgod.mp3">
               <div class="playlist-main">
-                <div class="playlist-title">The Paradox of God</div>
+                <div class="playlist-title">Initial Premise</div>
                 <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
               </div>
               <div class="playlist-duration">--:--</div>
