Implement audio player and playlist in read.html
Added an audio player section with a playlist to the read.html page.

--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -84,11 +84,33 @@ footer{
 <body>
 
 <header>
-  <div class="back-button">
-    <a href="/reflections/index.html">← Back to Reflections</a>
-  </div>
-  <h1>Oneness & Duality</h1>
-  <h2>Beyond the Veil of Separation</h2>
+  <!-- AUDIO PLAYER + PLAYLIST -->
+      <section class="audio-wrap">
+        <div class="audio-wrapper">
+          <audio id="reflectionAudio" controls preload="metadata">
+            <source id="audioSource" src="" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+
+          <div class="playlist">
+            <div class="playlist-row active" data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
+              <div class="playlist-main">
+                <div class="playlist-title">The Subconscious Mind</div>
+                <div class="playlist-sub">The Silent Architech of your soul.</div>
+              </div>
+              <div class="playlist-duration">--:--</div>
+            </div>
+
+            <div class="playlist-row" data-src="/reflections/pages/subconsciousmind/subcon.mp3">
+              <div class="playlist-main">
+                <div class="playlist-title">The Paradox of God</div>
+                <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
+              </div>
+              <div class="playlist-duration">--:--</div>
+            </div>
+          </div>
+        </div>
+      </section>
   <p>First Edition -- 2025</p>
 </header>
 
