--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -93,7 +93,7 @@ footer{
           </audio>
 
           <div class="playlist">
-            <div class="playlist-row active" data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
+            <div class="playlist-row active" data-src="/oneness-duality/onenessduality.mp3">
               <div class="playlist-main">
                 <div class="playlist-title">The Subconscious Mind</div>
                 <div class="playlist-sub">The Silent Architech of your soul.</div>
@@ -103,7 +103,7 @@ footer{
 
             <div class="playlist-row" data-src="/reflections/pages/oneness-duality/onenessduality.mp3">
               <div class="playlist-main">
-                <div class="playlist-title">The Paradox of God</div>
+                <div class="playlist-title">Oneness and Duality</div>
                 <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
               </div>
               <div class="playlist-duration">--:--</div>
