--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -529,9 +529,52 @@ footer{
       return area;
     }
   }
+  
 
 })();
+
+  // Audio playlist logic
+    document.addEventListener('DOMContentLoaded', () => {
+      const audioPlayer = document.getElementById('reflectionAudio');
+      const audioSource = document.getElementById('audioSource');
+      const rows = document.querySelectorAll('.playlist-row');
+
+      // Default track: first row
+      if (rows.length > 0) {
+        audioSource.src = rows[0].dataset.src;
+        audioPlayer.load();
+      }
+
+      // Clicking a row switches track
+      rows.forEach(row => {
+        row.addEventListener('click', () => {
+          rows.forEach(r => r.classList.remove('active'));
+          row.classList.add('active');
+
+          audioSource.src = row.dataset.src;
+          audioPlayer.load();
+          audioPlayer.play();
+        });
+      });
+
+      // Auto-fill durations
+      rows.forEach(row => {
+        const tempAudio = new Audio(row.dataset.src);
+        tempAudio.addEventListener('loadedmetadata', () => {
+          const dur = tempAudio.duration;
+          if (!isNaN(dur)) {
+            const total = Math.floor(dur);
+            const min = String(Math.floor(total / 60)).padStart(2, '0');
+            const sec = String(total % 60).padStart(2, '0');
+            const durEl = row.querySelector('.playlist-duration');
+            if (durEl) durEl.textContent = `${min}:${sec}`;
+          }
+        });
+      });
+    });
+
 </script>
+  
 <!-- ===== /Floating TTS Reader ===== -->
 </body>
 </html>
