--- a/reflections/pages/oneness-duality/read.html
+++ b/reflections/pages/oneness-duality/read.html
@@ -79,6 +79,80 @@ footer{
   body{padding:28px 6%;}
   header h1{font-size:1.8rem;}
 }
+  /* =========================
+       AUDIO PLAYLIST (tighter)
+    ========================== */
+    .audio-wrap{
+      max-width:800px;
+      margin:1.2rem auto 1.2rem auto;
+      padding:0.85rem 0.75rem;
+      border-radius:16px;
+      background:#261a15;
+      border:3px solid rgba(101,55,14,1);
+    }
+
+    #reflectionAudio{
+      width:100%;
+      display:block;
+    }
+
+    .playlist{
+      margin-top:0.9rem;
+      display:flex;
+      flex-direction:column;
+      gap:0.4rem;
+    }
+
+    .playlist-row{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:0.55rem 0.55rem;
+      background:#261a15;
+      border-radius:8px;
+      cursor:pointer;
+      border:1.5px solid #120d09;
+      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
+    }
+
+    .playlist-row:hover{ border-color:#42251c; }
+
+    .playlist-row.active{
+      background:#170d09;
+      border-color:#997060;
+      box-shadow:0 0 2px rgba(255,0,0,0.4);
+    }
+
+    .playlist-main{
+      display:flex;
+      flex-direction:column;
+      gap:0rem;
+      overflow:hidden;
+    }
+
+    .playlist-title{
+      font-size:0.96rem;
+      font-weight:600;
+      color:#f3e6dd;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .playlist-sub{
+      font-size:0.78rem;
+      color:#b29587;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+
+    .playlist-duration{
+      font-size:0.82rem;
+      color:#c9b0a4;
+      margin-left:0.75rem;
+      flex-shrink:0;
+    }
 </style>
 </head>
 <body>
