--- a/reflections/pages/mirror-of-worship/read.html
+++ b/reflections/pages/mirror-of-worship/read.html
@@ -89,8 +89,8 @@
 
     /* ===== Audio block (kept minimal) ===== */
     .audio-wrapper{
-      padding: 0 clamp(22px,4vw,44px);
-      margin: 16px 0 4px;
+      padding: 0 clamp(5px,4vw,4px);
+      margin: 8px 0 4px;
     }
     .audio-wrapper audio{
       width: 100%;
@@ -261,26 +261,36 @@
         ☰
       </button>
       <nav class="ref-nav">
-        <a href="/reflections/index.html">All Reflections</a>
+        <a href="/reflections/index.html">HOME</a>
         <a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a>
         <a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a>
         <a href="/reflections/pages/mirror-of-worship/read.html" class="current">Mirror of Worship</a>
+        <a href="/reflections/pages/divine-hiddeness/read.html">Divine Hiddeness</a>
+        <a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a>
+        <a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a>
+        <a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a>
+        <a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a>
+        <a href="/reflections/pages/transcendence/read.html">Transcendence</a>
+        <a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a>
+        <a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a>
+
+          <!-- Included only as a link (page must exist in your repo to avoid 404) -->
+        <a href="/reflections/pages/moral-choice/read.html">Moral Choice</a>
+
+        <a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a>
+        <a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a>
+        <a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a>
+        <a href="/reflections/pages/diety/read.html">THE DEITY</a>
+        <a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a>
+        <a href="/reflections/pages/silent-influence/read.html">Silent Influence</a>
+        <a href="/reflections/pages/oneness-duality/read.html">Oneness Duality</a>
+        <a href="/reflections/pages/mirror-of-worship/read.html">The Mirror of Worship</a>
       </nav>
     </div>
   </header>
 
   <main class="page">
     <article class="paper" role="article">
-
-      <!-- 🔊 AUDIO: inserted, design untouched -->
-      <section class="audio-wrapper">
-        <div class="audio-caption">Listen — The Mirror of Worship</div>
-        <audio controls preload="metadata">
-          <source src="/reflections/pages/mirror-of-worship/themirrorofworship.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
-      </section>
-
       <!-- ===== Cover (image + title + actions) ===== -->
       <section class="cover">
         <a href="mirror-worship.PNG" title="Open cover">
