--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -355,12 +355,11 @@
 
   <!-- AUDIO: native first; JS will enhance and auto-fallback -->
   <section class="audio-wrap" id="audioMount" style="margin:16px 1rem;">
-    <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
+    <p class="label">🎧<strong>The Madness of Faith</strong></p>
     <audio id="nativeAudio" controls preload="auto" style="width:100%">
       <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
-    <button id="stopAudio" class="btn ghost" style="margin-top:8px">⏹ Stop</button>
   </section>
 
   <main class="page-wrap">
