--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <!-- Main reflections styles -->
-  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+  <link rel="stylesheet" href="/reflections/assets/ref-header.css">
 
   <style>
     /* =========================
@@ -415,6 +415,7 @@
       margin-left: 0.75rem;
       flex-shrink: 0;
     }
+    
   </style>
 
   <!-- Service Worker -->
