--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -34,7 +34,15 @@
 
 <body>
   <div id="reflectionsHeader" data-current="the-lost-language-of-metaphor"></div>
-  <section class="audio-wrap" id="audio"></section>
+  <!-- AUDIO: native first; JS will enhance and auto-fallback -->
+  <section class="audio-wrap" id="audioMount" style="margin:16px 1rem;">
+    <p class="label">🎧<strong>the lost language of metaphor.</strong></p>
+    <audio id="nativeAudio" controls preload="auto" style="width:100%">
+      <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </section>
+
 
   <script>
     window.REFLECTION_PAGE = {
