--- a/reflections/index.html
+++ b/reflections/index.html
@@ -180,6 +180,46 @@
       </article>
 
       <!-- =========================================
+           8) CARD: ONENESS & DUALITY
+           ========================================= -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/oneness-duality/index.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/oneness-duality/oneness-duality.png"
+                 alt="oneness duality cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3>
+            <a class="title-link" href="/reflections/pages/oneness-duality/read2.html" target="_blank" rel="noopener">
+              From Oneness to Duality
+            </a>
+          </h3>
+
+          <p>through philosophy, theology, and psychology, converging a profound idea that duality—the perceived separation between the self and the world</p>
+
+          <p class="meta">
+            First Edition 2025 •
+            <a class="title-link" href="/reflections/pages/oneness-duality/index.html" target="_blank" rel="noopener">PDF</a>
+          </p>
+           <section class="audio-wrap" id="audioMount-onenessduality">
+            <p class="label">🎧Now Playing: <strong>Onenesd and Duality</strong></p>
+            <audio controls preload="auto" style="width:100%"> 
+              <source src="/reflections/pages/onenss-duality/onenessduality.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+          </section>
+          <div class="share-group"
+               data-share-url="https://stonegrillresto.net/reflections/pages/oneness-duality/read.html"
+               data-share-title="From Oneness to Duality — Ninox Antolihao"></div>
+        </div>
+      </article>
+
+
+      <!-- =========================================
            12) CARD: THE SUBCONSCIOUS MIND
            ========================================= -->
       <article class="card" id="subconsciousmind">
@@ -745,39 +785,7 @@
         </div>
       </article>
 
-      <!-- =========================================
-           8) CARD: ONENESS & DUALITY
-           ========================================= -->
-      <article class="card">
-        <div class="left">
-          <a class="book-link" href="/reflections/pages/oneness-duality/index.html" target="_blank" rel="noopener">
-            <img class="book-cover"
-                 src="/reflections/pages/oneness-duality/oneness-duality.png"
-                 alt="oneness duality cover"
-                 onerror="this.src='/reflections/assets/placeholder.jpg'">
-          </a>
-        </div>
-
-        <div class="right">
-          <h3>
-            <a class="title-link" href="/reflections/pages/oneness-duality/read2.html" target="_blank" rel="noopener">
-              From Oneness to Duality
-            </a>
-          </h3>
-
-          <p>through philosophy, theology, and psychology, converging a profound idea that duality—the perceived separation between the self and the world</p>
-
-          <p class="meta">
-            First Edition 2025 •
-            <a class="title-link" href="/reflections/pages/oneness-dualityindex.html" target="_blank" rel="noopener">PDF</a>
-          </p>
-
-          <div class="share-group"
-               data-share-url="https://stonegrillresto.net/reflections/pages/oneness-duality/read.html"
-               data-share-title="From Oneness to Duality — Ninox Antolihao"></div>
-        </div>
-      </article>
-
+      
       <!-- =========================================
            9) CARD: MULTILINGUAL MIND
            ========================================= -->
