--- a/reflections/index.html
+++ b/reflections/index.html
@@ -46,7 +46,7 @@
      ============================== -->
   <section class="audio-wrap global-player" id="globalPlayer">
     <p class="label">
-      🎧 <strong>Audio Reflection</strong>
+      🎧 <strong></strong>
       <span id="nowPlaying" style="opacity:.75">— select a track below</span>
     </p>
 
