--- a/reflections/index.html
+++ b/reflections/index.html
@@ -166,7 +166,7 @@
           <p>.Goodness is not the absence of darkness, but the discipline of not becoming it.</p>
 
           <section class="audio-wrap" id="audio-moral-choice">
-            <p class="label">🎧 play to Listen the devine premise</p>
+            <p class="label">🎧 the devine premise</p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/moral-choice/moralchoice.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
@@ -206,7 +206,7 @@
             <a class="title-link" href="/reflections/pages/oneness-duality/index.html" target="_blank" rel="noopener">PDF</a>
           </p>
            <section class="audio-wrap" id="audioMount-onenessduality">
-            <p class="label">🎧Now Playing: <strong>Onenesd and Duality</strong></p>
+            <p class="label">🎧: <strong>Onenesd and Duality</strong></p>
             <audio controls preload="auto" style="width:100%"> 
               <source src="/reflections/pages/oneness-duality/onenessduality.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
@@ -244,7 +244,7 @@
           <p class="meta">First Edition 2025</p>
 
           <section class="audio-wrap" id="audioMount-subconsciousmind">
-            <p class="label">🎧Now Playing: <strong>The Subconscious Mind</strong></p>
+            <p class="label">🎧: The Subconscious Mind</p>
             <audio controls preload="auto" style="width:100%"> 
               <source src="/reflections/pages/subconsciousmind/subcon.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
@@ -285,7 +285,7 @@
           </p>
 
           <section class="audio-wrap" id="audioMount-we-created-god">
-            <p class="label">🎧 Audio Reflection: <strong>The God We Create</strong></p>
+            <p class="label">🎧: <strong>The God We Create</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
@@ -377,7 +377,7 @@
                data-share-title="The Paradox of God — Ninox Antolihao"></div>
 
           <section class="audio-wrap" id="audioMount-prayer">
-            <p class="label">🎧 Audio Reflection: <strong>The Inner Listener</strong></p>
+            <p class="label">🎧: <strong>The Inner Listener</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/the-inner-listener/theinnerlistener.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
@@ -458,12 +458,11 @@
           <p>Faith was never meant to destroy the mind but to guide it toward clarity. Real belief must enlighten, not enslave.</p>
 
           <section class="audio-wrap" id="audioMount-madness">
-            <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
+            <p class="label">🎧 : <strong>The Madness of Faith</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
-            <button class="btn ghost" style="margin-top:8px" type="button">⏹ Stop</button>
           </section>
 
           <div class="meta">
@@ -503,7 +502,7 @@
           </p>
 
           <section class="audio-wrap" id="audioMount-lost-language">
-            <p class="label">🎧 Audio Reflection: <strong>The Lost Language of Metaphor</strong></p>
+            <p class="label">🎧 : <strong>The Lost Language of Metaphor</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
