--- a/reflections/index.html
+++ b/reflections/index.html
@@ -242,7 +242,19 @@
           <p>The silent architect of your identity.</p>
 
           <p class="meta">First Edition 2025</p>
+            <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/subconsciousmind/subcon.mp3"
+                    data-title="premise of god)">
+              ▶ Divine premise (Full)
+            </button>
 
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-inner-listener/theinnerlistener.mp3"
+                    data-title="The divine Premise (Short)">
+              ▶ The God We Created (Short)
+            </button>
+          </div>
           <section class="audio-wrap" id="audioMount-subconsciousmind">
             <p class="label">🎧: The Subconscious Mind</p>
             <audio controls preload="auto" style="width:100%"> 
