--- a/reflections/index.html
+++ b/reflections/index.html
@@ -245,8 +245,8 @@
             <div class="playlist">
             <button class="track-link" type="button"
                     data-src="/reflections/pages/subconsciousmind/subcon.mp3"
-                    data-title="premise of god)">
-              ▶ Divine premise (Full)
+                    data-title="Prayer">
+              ▶ The Inner Listener
             </button>
 
             <button class="track-link" type="button"
