--- a/reflections/index.html
+++ b/reflections/index.html
@@ -252,7 +252,7 @@
             <button class="track-link" type="button"
                     data-src="/reflections/pages/the-inner-listener/theinnerlistener.mp3"
                     data-title="The divine Premise (Short)">
-              ▶ The God We Created (Short)
+              ▶ the inner listener
             </button>
           </div>
           <section class="audio-wrap" id="audioMount-subconsciousmind">
