--- a/reflections/index.html
+++ b/reflections/index.html
@@ -245,13 +245,13 @@
             <div class="playlist">
             <button class="track-link" type="button"
                     data-src="/reflections/pages/subconsciousmind/subcon.mp3"
-                    data-title="Prayer">
-              ▶ The Inner Listener
+                    data-title="subconscious mind">
+              ▶ The Subconscious Mind
             </button>
 
             <button class="track-link" type="button"
                     data-src="/reflections/pages/the-inner-listener/theinnerlistener.mp3"
-                    data-title="The divine Premise (Short)">
+                    data-title="prayer">
               ▶ the inner listener
             </button>
           </div>
