--- a/reflections/index.html
+++ b/reflections/index.html
@@ -132,7 +132,7 @@
 
             <button class="track-link" type="button"
                     data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
-                    data-title="The divine Premise (Short)">
+                    data-title="The God We Created">
               ▶ The God We Created (Short)
             </button>
           </div>
